
include $(top_srcdir)/Common.am

LDADD = $(top_srcdir)/libmutomIB-0.1.la -lboost_program_options

bin_PROGRAMS = 	IB_lnlROCBuilder \
                IB_lnlROCBuilder2 \
                IB_portal3x6x5ROCBuilder \
		IB_ROCScaleToMidpt \
		IB_ROCScaleToMidAwo \
		IB_ROCScaleToMideff \
		IB_ROCPlot



